Added ingredient-list to DOM

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
     <div id="skyrim-alchemy">
         <h1>Skyrim Alchemy</h1>
         <p>Search by Ingredient Effect</p>
+        
+        <div id="ingredient-list"></div>
 
         <div class="ingredient">
             <h4>Blisterwort <span class="id">0004da25</span></h4>
