Tweak ingredient formatting so long properties are displayed correctly

--- a/index.html
+++ b/index.html
@@ -65,13 +65,15 @@
             font-family: monospace;
         }
         .ingredient li{
-            display: block;
-            width: 110px;
-            padding: 0 2px;
-            margin-left: 30px;
-            float: left;
-            list-style: none;
+            display:block;
+            width:130px;
+            height:17px;
+            padding:0 2px;
+            margin-left:10px;
+            float:left;
+            list-style:none;
             color:#075;
+            font-size:.9em;
         }
         .ingredient li.poison{
             color:#700;
