--- a/index.html
+++ b/index.html
@@ -30,13 +30,26 @@
             width: 20em;
             margin: 0 auto;
         }
-        #ingredient-list-container{
+        #ingredient-list-container, #workbench-container, #yield-container{
             float: left;
             width: 320px;
+        }
+        #workbench-container, #yield-container{
+            margin-left:20px;
         }
         #ingredient-list{
             height: 525px;
             overflow-y: auto;
+        }
+        #yield-container{
+
+        }
+        #workbench{
+            height:156px;
+            padding:10px;
+            border:1px solid #bbb;
+            border-radius:8px;
+            background-color: #f9faf1;
         }
         .ingredient{
             width: 300px;
@@ -84,11 +97,22 @@
 <body>
     <div id="skyrim-alchemy">
         <h1>Skyrim Alchemy</h1>
+
         <p><input id="alchemy-search" type="text" placeholder="Search for ingredient or effect" /></p>
 
         <div id="ingredient-list-container">
             <h2>Ingredients</h2>
             <div id="ingredient-list"></div>
+        </div>
+        
+        <div id="workbench-container">
+            <h2>Workbench</h2>
+            <div id="workbench"></div>
+        </div>
+        
+        <div id="yield-container">
+            <h2>Yield</h2>
+            <div id="yield"></div>
         </div>
 
         <div class="clear"></div>
