Factorer CSS rules into separate stylesheet file

--- a/index.html
+++ b/index.html
@@ -5,94 +5,8 @@
     <script src="jquery-1.7.1.js"></script>
     <script src="skyrim-ingredients.js"></script>
     <script src="skyrim-alchemy.js"></script>
-    <style>
-        body{
-            font-family: "PT Sans", Helvetica, Arial, sans-serif;
-            font-size: 13px;
-            background-color:#eee;
-        }
-        .clear{
-            clear:both;
-        }
-        #skyrim-alchemy{
-            width:700px;
-            border:1px solid #ddd;
-            border-radius:4px;
-            margin:0 auto;
-            padding:20px 20px;
-            background-color:#fff;
-        }
-        #skyrim-alchemy h1{
-            margin:0;
-        }
-        #alchemy-search{
-            display: block;
-            width: 20em;
-            margin: 0 auto;
-        }
-        #ingredient-list-container, #workbench-container, #yield-container{
-            float: left;
-            width: 320px;
-        }
-        #workbench-container, #yield-container{
-            margin-left:20px;
-        }
-        #ingredient-list{
-            height: 525px;
-            overflow-y: auto;
-        }
-        #yield-container{
-
-        }
-        #workbench{
-            height:156px;
-            padding:10px;
-            border:1px solid #bbb;
-            border-radius:8px;
-            background-color: #f9faf1;
-        }
-        .ingredient{
-            width: 300px;
-            height: 50px;
-            border: 1px solid #bbb;
-            background-color: #fafafa;
-            margin-bottom: 3px;
-            overflow: hidden;
-            border-radius: 3px;
-        }
-        .ingredient h4, .ingredient ul, .ingredient li{
-            margin: 0;
-            padding: 0;
-            position: relative;
-        }
-        .ingredient h4{
-            margin-left: 5px;
-        }
-        .ingredient h4 span.id{
-            float: right;
-            margin-right: 5px;
-            margin-top: 1px;
-            color: #bbb;
-            font-weight: normal;
-            font-size: .9em;
-            font-family: monospace;
-        }
-        .ingredient li{
-            display:block;
-            width:130px;
-            height:17px;
-            padding:0 2px;
-            margin-left:10px;
-            float:left;
-            list-style:none;
-            color:#096;
-            font-size:.9em;
-        }
-        .ingredient li.poison{
-            color:#700;
-        }
-    </style>
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href="alchemy.css" rel="stylesheet"/>
+    <link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet" type="text/css">
 </head>
 <body>
     <div id="skyrim-alchemy">
