Added minified jquery

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Skyrim Alchemy</title>
-    <script src="jquery-1.7.1.js"></script>
+    <script src="jquery-1.7.1.min.js"></script>
     <script src="skyrim-ingredients.js"></script>
     <script src="skyrim-alchemy.js"></script>
     <link href="alchemy.css" rel="stylesheet"/>
