Add checkbox for workbench compatibility filter

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div id="workbench-container">
             <h2>Workbench</h2>
             <div id="workbench"></div>
+            <p><label for="filter-workbench">Only show ingredients that match the workbench</label> <input id="filter-workbench" name="filter-workbench" type="checkbox" checked /></p>
         </div>
         
         <div id="yield-container">
