Added some help text to the page

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,12 @@
     <script src="skyrim-ingredients.js"></script>
     <script src="skyrim-alchemy.js"></script>
     <link href="alchemy.css" rel="stylesheet"/>
-    <link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css">
 </head>
 <body>
     <div id="skyrim-alchemy">
         <h1>Skyrim Alchemy</h1>
+        <p>Skyrim Alchemy lets you quickly combine various ingredients to make potions and poisons. Press <code>/</code> to search for an ingredient or effect. Click an ingredient card to add or remove it from the workbench area.</p>
 
         <p><input id="alchemy-search" type="text" placeholder="Search for ingredient or effect" /></p>
 
